# Industrial-Thread-Pool

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  config.json  main.cpp
.github/workflows/: build.yml
include/: Logger.hpp  ThreadPool.hpp
src/: ThreadPool.cpp
tests/: test_threadpool.cpp
